--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
 script:
   - CXX=/usr/bin/g++-6 CC=/usr/bin/gcc-6 cmake -DCOVERAGE=1 .
   - cmake --build .
-  - ./RunTests
+  - ./cmake-build-debug/test/tests/RunTests
 
 after_success:
   - coveralls --root . -E ".*CMakeFiles.*"
